Fixed OpenAPI definition of error response

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -875,9 +875,9 @@ components:
   schemas:
     Error:
       required:
-        - message
+        - error
       properties:
-        message:
+        error:
           type: string
     ListLinks:
       properties:
