--- a/.squash.yml
+++ b/.squash.yml
@@ -2,5 +2,7 @@ deployments:
   default:
         filename:
           ./Dockerfile
+        vm_size:
+          1GB
         port_forwarding:
           80:3000
