Improve 403/404 error descriptions in Storefront API  v2 docs

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -2439,10 +2439,18 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            properties:
+              error:
+                type: string
+                example: 'The resource you were looking for could not be found.'
+                default: 'The resource you were looking for could not be found.'
     403Forbidden:
       description: You are not authorized to access this page.
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            properties:
+              error:
+                type: string
+                example: 'You are not authorized to access this page.'
+                default: 'You are not authorized to access this page.'
