--- a/guides/package.json
+++ b/guides/package.json
@@ -38,7 +38,7 @@
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
     "react-syntax-highlighter": "^10.1.1",
-    "redoc": "^2.0.0-rc.0",
+    "redoc": "^2.0.0-rc.1",
     "rehype-react": "^3.1.0",
     "remark": "^10.0.1",
     "remark-html": "^9.0.0",
@@ -61,6 +61,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-plugin-module-resolver": "^3.1.2",
+    "babel-preset-gatsby": "^0.1.6",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
