Added `discounted_amount` for LineItem serializer

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -1424,6 +1424,12 @@ components:
             display_additional_tax_total:
               type: string
               example: '$5.00'
+            discounted_amount:
+              type: string
+              example: '125.0'
+            display_discounted_amount:
+              type: string
+              example: '$125.00'
             promo_total:
               type: string
               example: '-5.0'
