--- a/guides/package.json
+++ b/guides/package.json
@@ -28,6 +28,7 @@
     "lodash.kebabcase": "^4.1.1",
     "lodash.startcase": "^4.4.0",
     "mobx": "^4.2.0",
+    "prism-react-renderer": "^0.1.5",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.0",
@@ -37,7 +38,6 @@
     "react-emotion": "^10.0.0",
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
-    "react-syntax-highlighter": "^10.1.1",
     "redoc": "^2.0.0-rc.1",
     "rehype-react": "^3.1.0",
     "remark": "^10.0.1",
