--- a/guides/package.json
+++ b/guides/package.json
@@ -5,6 +5,7 @@
   "author": "Spark Solutions <we@sparksolutions.co>",
   "dependencies": {
     "@emotion/core": "^10.0.2",
+    "disqus-react": "^1.0.5",
     "emotion": "^10.0.0",
     "emotion-server": "^10.0.0",
     "gatsby": "^2.0.19",
