--- a/netlify.toml
+++ b/netlify.toml
@@ -66,6 +66,101 @@ ID = "49ded9cc-27d3-4e02-b186-4fd7fd334ed8"
   from = "/developer/api_customization_tutorial.html"
   to = "/developer/customization/api_v1.html"
 
+[[redirects]]
+  from = "/developer/deface_overrides_tutorial.html"
+  to = "/developer/tutorials/deface_overrides_tutorial.html"
+
+[[redirects]]
+  from = "/developer/extensions_tutorial.html"
+  to = "/developer/tutorials/extensions_tutorial.html"
+
+[[redirects]]
+  from = "/developer/testing.html"
+  to = "/developer/tutorials/testing.html"
+
+[[redirects]]
+  from = "/developer/migration.html"
+  to = "/developer/tutorials/migration.html"
+
+[[redirects]]
+  from = "/developer/seo.html"
+  to = "/developer/tutorials/seo.html"
+
+# core
+[[redirects]]
+  from = "/developer/addresses.html"
+  to = "/developer/core/addresses.html"
+
+[[redirects]]
+  from = "/developer/adjustments.html"
+  to = "/developer/core/adjustments.html"
+
+[[redirects]]
+  from = "/developer/calculators.html"
+  to = "/developer/core/calculators.html"
+
+[[redirects]]
+  from = "/developer/inventory.html"
+  to = "/developer/core/inventory.html"
+
+[[redirects]]
+  from = "/developer/orders.html"
+  to = "/developer/core/orders.html"
+
+[[redirects]]
+  from = "/developer/payments.html"
+  to = "/developer/core/payments.html"
+
+[[redirects]]
+  from = "/developer/preferences.html"
+  to = "/developer/core/preferences.html"
+
+[[redirects]]
+  from = "/developer/products.html"
+  to = "/developer/core/products.html"
+
+[[redirects]]
+  from = "/developer/promotions.html"
+  to = "/developer/core/promotions.html"
+
+[[redirects]]
+  from = "/developer/shipments.html"
+  to = "/developer/core/shipments.html"
+
+[[redirects]]
+  from = "/developer/taxation.html"
+  to = "/developer/core/taxation.html"
+
+# customization
+
+[[redirects]]
+  from = "/developer/authentication.html"
+  to = "/developer/customization/authentication.html"
+
+[[redirects]]
+  from = "/developer/i18n.html"
+  to = "/developer/customization/i18n.html"
+
+[[redirects]]
+  from = "/developer/view.html"
+  to = "/developer/customization/view.html"
+
+[[redirects]]
+  from = "/developer/asset.html"
+  to = "/developer/customization/asset.html"
+
+[[redirects]]
+  from = "/developer/logic.html"
+  to = "/developer/customization/logic.html"
+
+[[redirects]]
+  from = "/developer/images.html"
+  to = "/developer/customization/images.html"
+
+[[redirects]]
+  from = "/developer/checkout.html"
+  to = "/developer/customization/checkout.html"
+
 # other
 [[redirects]]
   from = "/user/configuring_taxonomies.html"
