--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -351,7 +351,7 @@ paths:
       operationId: 'Apply Coupon Code'
       responses:
         '200':
-          description: Cuopon code was applied successfully
+          description: Coupon code was applied successfully
           content:
             application/vnd.api+json:
               schema:
