--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Spree Sandbox",
   "description":"demo store built with Spree",
   "repository": "https://github.com/spree/spree",
-  "logo": "http://guides.spreecommerce.org/images/logo.png",
+  "logo": "https://spreecommerce.org/wp-content/uploads/2019/09/spree-60x60@2x.png",
   "keywords": [
     "spree"
   ],
