add redis and sendgrid to heroku settings

--- a/app.json
+++ b/app.json
@@ -10,7 +10,9 @@
     {"url": "https://github.com/spark-solutions/heroku-buildpack-spree.git"}
   ],
   "addons": [
-    "heroku-postgresql:hobby-dev"
+    "heroku-postgresql:hobby-dev",
+    "heroku-redis:hobby-dev",
+    "sendgrid:starter"
   ],
   "scripts": {
     "postdeploy": "bundle exec rake db:migrate && bundle exec rake db:seed && SKIP_SAMPLE_IMAGES=true bundle exec rake spree_sample:load"
