--- a/guides/package.json
+++ b/guides/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "author": "Spark Solutions <we@sparksolutions.co>",
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@emotion/core": "^10.0.2",
     "emotion": "^10.0.0",
     "emotion-server": "^10.0.9",
@@ -12,10 +13,10 @@
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-google-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "2.2.12",
+    "gatsby-plugin-sharp": "2.2.36",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-remark-component": "devilcoders/gatsby-remark-component",
     "gatsby-remark-copy-linked-files": "^2.0.6",
@@ -29,7 +30,7 @@
     "lodash.kebabcase": "^4.1.1",
     "lodash.startcase": "^4.4.0",
     "mobx": "^4.2.0",
-    "prism-react-renderer": "^0.1.5",
+    "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.0",
@@ -37,13 +38,13 @@
     "react": "^16.5.1",
     "react-dom": "^16.9.0",
     "react-emotion": "^10.0.0",
-    "react-feather": "^1.1.4",
+    "react-feather": "^2.0.3",
     "react-helmet": "^5.2.0",
-    "redoc": "^2.0.0-rc.1",
-    "rehype-react": "^3.1.0",
-    "remark": "^10.0.1",
-    "remark-html": "^9.0.0",
-    "serve": "^10.1.1",
+    "redoc": "2.0.0-rc.12",
+    "rehype-react": "^4.0.1",
+    "remark": "^11.0.1",
+    "remark-html": "^10.0.0",
+    "serve": "^11.2.0",
     "styled-components": "^4.2.0",
     "tachyons": "^4.11.1"
   },
@@ -63,14 +64,14 @@
   "devDependencies": {
     "babel-eslint": "^10.0.2",
     "babel-plugin-module-resolver": "^3.1.2",
-    "babel-preset-gatsby": "^0.1.6",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-jsx": "^6.0.2",
+    "babel-preset-gatsby": "^0.2.20",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-jsx": "^8.1.0",
     "eslint-config-standard-react": "^9.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
