--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,36 @@ jobs:
             ./tmp/cc-test-reporter sum-coverage tmp/codeclimate.*.json -p 4 -o tmp/codeclimate.total.json
             ./tmp/cc-test-reporter upload-coverage -i tmp/codeclimate.total.json
 
+  update_staging_repository:
+    docker:
+      - image: circleci/ruby:2.6.3
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - 54:50:5e:4e:80:6d:2e:26:43:c6:99:bd:39:b2:71:dc
+      - run: mkdir -p ~/.ssh
+      - run: ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+      - run: ssh-add -D
+      - run: ssh-add ~/.ssh/id_rsa_54505e4e806d2e2643c699bd39b271dc
+      - run: git clone -b master git@github.com:spark-solutions/spree-designs.git
+      - run: gem install bundler -v 1.17.3
+      - run:
+          command: bundle update spree
+          working_directory: ~/project/spree-designs
+      - run:
+          command: |
+            git config user.name 'AutoDeploy'
+            git config user.email 'autodeploy@sparksolutions.co'
+          working_directory: ~/project/spree-designs
+      - run:
+          command: |
+            git add -A
+            git commit -m "Auto-commit v#${CIRCLE_BUILD_NUM}"
+          working_directory: ~/project/spree-designs
+      - run:
+          command: git push origin master
+          working_directory: ~/project/spree-designs
+
 workflows:
   version: 2
   main:
@@ -154,3 +184,9 @@ workflows:
       - send_test_coverage:
           requires:
             - run_tests_mysql
+  update_staging_repository:
+    jobs:
+      - update_staging_repository:
+          filters:
+            branches:
+              only: master
